--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "resolutions": {
+    "styled-components": "^5"
+  },
   "dependencies": {
     "@next/font": "13.1.4",
     "@types/node": "18.11.18",
@@ -18,6 +21,7 @@
     "next": "13.1.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "styled-components": "^5.3.6",
     "typescript": "4.9.4"
   }
 }
