--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev -p 12000",
+    "emul": "node server.js",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -18,11 +19,13 @@
     "@types/react-dom": "18.0.10",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.4",
+    "express": "^4.18.2",
     "next": "13.1.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "styled-components": "^5.3.6",
-    "typescript": "4.9.4"
+    "typescript": "4.9.4",
+    "vhost": "^3.0.2"
   },
   "devDependencies": {
     "@types/styled-components": "^5.1.26"
