--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
     "amazon-cognito-identity-js": "^6.1.2",
+    "dotenv": "^16.0.3",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.4",
     "express": "^4.18.2",
