--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev -p 12000",
     "emul": "node server.js",
     "build": "npx next build",
-    "start": "npx next start",
+    "start": "next start -- --port $PORT",
     "zip": "sh zip.sh",
     "lint": "next lint"
   },
