--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev -p 12000",
     "emul": "node server.js",
     "build": "npx next build",
-    "start": "next start -- --port $PORT",
+    "start": "next start",
     "zip": "sh zip.sh",
     "lint": "next lint"
   },
@@ -19,7 +19,6 @@
     "@emotion/styled": "^11.10.5",
     "@mui/material": "^5.11.5",
     "@next/font": "13.1.4",
-    "@types/next-auth": "^3.15.0",
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
