--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -66,7 +66,7 @@ jobs:
           environment_name: airplane-next-dev 
           region: ap-northeast-1
           version_label: "aiplane-next-dev-${{ steps.format-time.outputs.replaced }}"
-          deployment_package: .next/deploy.zip
+          deployment_package: deploy/deploy.zip
 
       - name: Deployed!
         run: echo App deployed to ELB
