--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev -p 12000",
     "emul": "node server.js",
-    "build": "npx next build",
+    "build": "next build",
     "start": "next start",
     "zip": "sh zip.sh",
     "lint": "next lint"
