build on action

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,6 +41,9 @@ jobs:
       - name: Linting check
         run: yarn lint
 
+      - name: Build product
+        run: yarn build
+
       - name: Pack
         run: yarn zip
 
