--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,6 +25,9 @@ jobs:
         with:
           node-version: ${{ matrix.node }}
 
+      - name: Install
+        run: yarn install
+
       - name: Pack
         run: yarn zip
 
