--- a/package.json
+++ b/package.json
@@ -27,12 +27,14 @@
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.4",
     "express": "^4.18.2",
+    "formik": "^2.2.9",
     "next": "13.1.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "styled-components": "^5.3.6",
     "typescript": "4.9.4",
-    "vhost": "^3.0.2"
+    "vhost": "^3.0.2",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/styled-components": "^5.1.26"
